A small responsive fix for the vertical line that connects the steps on the homepage. Matched the background color of the code blocks on the homepage more closely to the mockup. Fixed an IE issue for the footer social link icons. Adjusted some of the homepage text to match changes in the latest mockup. Adjusted the width of the code blocks and their content on the homepage to prevent horizontal scrolling.

--- a/docs/.vuepress/theme/styles/custom/components/_footer.scss
+++ b/docs/.vuepress/theme/styles/custom/components/_footer.scss
@@ -82,6 +82,12 @@ $page-footer-border: 1px solid $color-7;
   }
 
   .social-links {
+
+    img {
+      display: block;
+      margin: 0;
+      max-width: 48px;
+    }
     
     ul {
       display: flex;
