--- a/docs/.vuepress/theme/styles/custom/pages/_page-home.scss
+++ b/docs/.vuepress/theme/styles/custom/pages/_page-home.scss
@@ -207,6 +207,11 @@ $home-feature-icon-bottom-spacing: 2.625rem;
     margin-bottom: 4rem;
   }
 
+  // code blocks
+  div[class*="language"] {
+    background-color: darken($color-6, 8);
+  }
+
   // hide the line numbers on code blocks
   .line-numbers-mode:after,
   .line-numbers-wrapper {
@@ -215,7 +220,10 @@ $home-feature-icon-bottom-spacing: 2.625rem;
 
   .line-numbers-mode pre {
     padding: 1rem !important;
-    @include scrollbar-h;
+    // making these code blocks wrap so that they
+    // more responsive
+    white-space: pre-wrap !important;
+    // @include scrollbar-h;
   }
 
   a:not(.btn) {
@@ -235,33 +243,22 @@ $home-feature-icon-bottom-spacing: 2.625rem;
 
 .steps-items__content {
   $i: 45px; // dimensions of the step number
+  $x: 4.063rem; // the bottom padding on the main list items
 
-  position: relative;
   counter-reset: steps;
   list-style-type: none;
   margin: 0;
   padding: 0;
-
-  &:after {
-    position: absolute;
-    top: 0;
-    z-index: 0;
-    left: 14px;
-    display: block;
-    width: 1px;
-    height: 74%;
-    content: "";
-    background-color: rgba(#fff, 0.5);
-  }
   
   > li {
     padding-left: 85px;
     position: relative;
 
     &:not(:last-of-type) {
-      margin-bottom: 4.063rem;
+      margin-bottom: $x;
     }
 
+    // the circular step number
     &:before {
       position: absolute;
       top: 0;
@@ -274,9 +271,26 @@ $home-feature-icon-bottom-spacing: 2.625rem;
       border: 1px solid rgba(#fff, 0.5);
       font-weight: $fw-medium;
       text-align: center;
-      line-height: calc(#{$i} - 4px);
+      // line-height: calc(#{$i} - 4px);
+      line-height: $i;
       width: $i;
       height: $i;
+    }
+
+    &:not(:last-of-type) {
+
+      // the vertical line that connects the step numbers
+      &:after {
+        position: absolute;
+        top: 0;
+        left: calc(#{$i} / 2);
+        z-index: 0;
+        display: block;
+        width: 1px;
+        height: calc(100% + #{$x});
+        content: "";
+        background-color: rgba(#fff, 0.2);
+      }
     }
   }
 
@@ -317,5 +331,24 @@ $home-feature-icon-bottom-spacing: 2.625rem;
   .page-masthead {
     margin-bottom: 2rem;
     text-align: center;
+  }
+}
+
+@media (min-width: $MQLarge) {
+  .steps-items__content {
+
+    > li {
+      display: flex;
+      align-items: center;
+
+      > *:first-of-type {
+        flex: 0 0 42%;
+        padding-right: 2rem;
+      }
+
+      > *:last-of-type {
+        flex: auto;
+      }
+    }
   }
 }
